--- a/BulletinBoardApplication/views/singlePost.ejs
+++ b/BulletinBoardApplication/views/singlePost.ejs
@@ -20,7 +20,7 @@
 
       <h1 class="centerH"><%= data[0].title %></h1>
       <p><%= data[0].body %>
-        <span class="deleteIcon"><a href=<%="/delete/post/"+data[0].id%>>
+        <span class="deleteIcon"><a href=<%="/delete/"+data[0].id%>>
           <i class="fa fa-trash" class="tab"></i>
           <span class="tip">Delete Post</span></a>
         </span>
